@@ -82,6 +82,8 @@ The following metricsets are available:
 
 * <<metricbeat-metricset-system-process_summary,process_summary>>
 
+* <<metricbeat-metricset-system-raid,raid>>
+
 * <<metricbeat-metricset-system-socket,socket>>
 
 * <<metricbeat-metricset-system-uptime,uptime>>
@@ -105,6 +107,8 @@ include::system/network.asciidoc[]
 include::system/process.asciidoc[]
 
 include::system/process_summary.asciidoc[]
+
+include::system/raid.asciidoc[]
 
 include::system/socket.asciidoc[]
 
